# godot_rust_hello_world

rust-hello-world/: HelloWorld.gdns  TestScene.tscn  hello_world.gdnlib  project.godot
rust-hello-world-lib/: Cargo.toml  makefile
rust-hello-world-lib/src/: lib.rs
